--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -7,24 +7,23 @@
 
     <fragment
         android:id="@+id/homeFragment"
-        android:name="br.com.mypersonalfinances.HomeFragment"
+        android:name="br.com.mypersonalfinances.view.fragments.HomeFragment"
         android:label="fragment_home"
         tools:layout="@layout/fragment_home" >
         <action
             android:id="@+id/action_homeFragment_to_addTransactionFragment"
             app:destination="@id/addTransactionFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_extractFragment"
+            app:destination="@id/extractFragment" />
     </fragment>
     <fragment
         android:id="@+id/addTransactionFragment"
-        android:name="br.com.mypersonalfinances.AddTransactionFragment"
-        android:label="AddTransactionFragment" >
-        <action
-            android:id="@+id/action_addTransactionFragment_to_homeFragment"
-            app:destination="@id/homeFragment" />
-    </fragment>
+        android:name="br.com.mypersonalfinances.view.fragments.AddTransactionFragment"
+        android:label="AddTransactionFragment" />
     <fragment
-        android:id="@+id/editTransactionFragment"
-        android:name="br.com.mypersonalfinances.EditTransactionFragment"
-        android:label="fragment_edit_transaction"
-        tools:layout="@layout/fragment_edit_transaction" />
+        android:id="@+id/extractFragment"
+        android:name="br.com.mypersonalfinances.view.fragments.ExtractFragment"
+        android:label="fragment_extract"
+        tools:layout="@layout/fragment_extract" />
 </navigation>
