--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,10 @@
     <color name="green">#49AA26</color>
     <color name="light_green">#3DD705</color>
     <color name="dark_green">#2D4A22</color>
+    <color name="gray">#363F5F</color>
+    <color name="light_gray">#EDECEC</color>
+    <color name="background">#E5E5E5</color>
+    <color name="red">#E92929</color>
+    <color name="spent_money">#ECC5C3</color>
+    <color name="saved_money">#C8EAC6</color>
 </resources>
