--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="light_gray">#EDECEC</color>
     <color name="background">#E5E5E5</color>
     <color name="red">#E92929</color>
-    <color name="spent_money">#ECC5C3</color>
-    <color name="saved_money">#C8EAC6</color>
+    <color name="soft_red">#ECC5C3</color>
+    <color name="soft_green">#C8EAC6</color>
+    <color name="shadow_green">#8EBF8B</color>
 </resources>
