--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -22,4 +22,8 @@
         <item name="android:textSize">18sp</item>
         <item name="cornerRadius">100dp</item>
     </style>
+
+    <style name="App.Custom.Indicator" parent="Widget.Material3.BottomNavigationView.ActiveIndicator">
+        <item name="android:color">@color/shadow_green</item>
+    </style>
 </resources>
