feat: organizing folders using mvvm architecture

--- a/app/src/main/res/layout/fragment_add_transaction.xml
+++ b/app/src/main/res/layout/fragment_add_transaction.xml
@@ -16,10 +16,10 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:hint="Valor"
-            app:startIconDrawable="@drawable/ic_money"
-            app:startIconContentDescription="Money Icon"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:startIconContentDescription="Money Icon"
+            app:startIconDrawable="@drawable/ic_money">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -35,11 +35,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:hint="Descrição"
-            app:startIconDrawable="@drawable/ic_note"
-            app:startIconContentDescription="Note Icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etAmount">
+            app:layout_constraintTop_toBottomOf="@+id/etAmount"
+            app:startIconContentDescription="Note Icon"
+            app:startIconDrawable="@drawable/ic_note">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
@@ -48,8 +48,6 @@
                 android:textSize="18sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
-
-
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/etDate"
             style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
@@ -57,18 +55,19 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:hint="Data"
-            app:startIconDrawable="@drawable/ic_calendar"
-            app:startIconContentDescription="Calendar Icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etDescription">
+            app:layout_constraintTop_toBottomOf="@+id/etDescription"
+            app:startIconContentDescription="Calendar Icon"
+            app:startIconDrawable="@drawable/ic_calendar">
 
-        <AutoCompleteTextView
-            android:id="@+id/dateInput"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:inputType="none"
-            android:textSize="18sp" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/dateInput"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:focusable="false"
+                android:inputType="none"
+                android:textSize="18sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -78,11 +77,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
             android:hint="Categoria"
-            app:startIconDrawable="@drawable/ic_category"
-            app:startIconContentDescription="Category Icon"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/etDate">
+            app:layout_constraintTop_toBottomOf="@+id/etDate"
+            app:startIconContentDescription="Category Icon"
+            app:startIconDrawable="@drawable/ic_category">
 
             <AutoCompleteTextView
                 android:id="@+id/autoCompleteTextView"
