--- a/app/src/main/res/layout/card_extract.xml
+++ b/app/src/main/res/layout/card_extract.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="130dp"
     android:layout_marginHorizontal="15dp"
-    android:layout_marginVertical="10dp"
+    android:layout_marginVertical="12dp"
     android:elevation="10dp">
 
 <RelativeLayout
@@ -16,8 +16,9 @@
         android:id="@+id/tv_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:text="Descrição"
-        android:textSize="15sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/tv_amount"
@@ -33,7 +34,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="15dp"
-        android:src="@drawable/ic_add" />
+        android:src="@drawable/ic_account_balance" />
 
     <TextView
         android:id="@+id/tv_category"
@@ -53,13 +54,5 @@
         android:text="13/04/2020"
         android:textSize="14sp" />
 
-
-
-
-
-
-
 </RelativeLayout>
-
-
 </com.google.android.material.card.MaterialCardView>
