--- a/app/src/main/res/layout/fragment_extract.xml
+++ b/app/src/main/res/layout/fragment_extract.xml
@@ -10,6 +10,7 @@
         android:id="@+id/recycler_view_extract"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
